<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Phone Dialer</string>
    
    <!-- Bottom Navigation -->
    <string name="nav_dialer">Dialer</string>
    <string name="nav_recents">Recents</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_settings">Settings</string>
    
    <!-- Dialer -->
    <string name="call_permission_required">Call permission is required to make calls</string>
    <string name="grant_permission">Grant</string>
    <string name="backspace">Backspace</string>
    <string name="call">Call</string>
    
    <!-- Contacts -->
    <string name="contacts_permission_required">Contacts permission is required to view contacts</string>
    
    <!-- Recents -->
    <string name="call_log_permission_required">Call log permission is required to view recent calls</string>
    <string name="no_recent_calls">No recent calls</string>
    
    <!-- Settings -->
    <string name="theme_settings">Theme Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="vibration">Vibration</string>
    <string name="sound">Sound</string>
    <string name="about">About</string>
    <string name="version">Version 1.0.0</string>
</resources>
